# BeyondSight

./: .dockerignore  .gitignore  LICENSE  Objectnav.Dockerfile  Objectnav_DDPPO_baseline.Dockerfile  Objectnav_basic.Dockerfile  Objectnav_beyond.Dockerfile  Objectnav_beyond_pre.Dockerfile  README.md  benchmark.py  bkp.launch  build.sh  build_run.sh  compile_yolact.sh  ddppo_agents.py  edit_ep.py  edit_ep_mini_test.py  igibson_config_and_run.Dockerfile  igibson_with_ros_and_beyond.Dockerfile  m3pd_to_gibson.txt  mine_Objectnav_beyond_stage0.Dockerfile  mine_Objectnav_beyond_stage1.Dockerfile  mine_Objectnav_beyond_stage2.Dockerfile  mine_build.sh  mine_build_run.sh  mine_compile_yolact_plus.sh  mine_test_env.sh  mine_test_locally_objectnav_rgbd.sh  run.sh  shell_on_container.sh  submission.sh  test_locally_objectnav_rgbd_gibson.sh
beyond_agent/: actor_critic.py  baselines_config_default.py  benchmark.py  beyond_agent.py  beyond_agent_without_internal_mapper.py  config_default.py  eval.py  fog_of_war.py  grab_viewpoints.py  greedyfollowerenv.py  gym_env_semantic_map.py  mapper.py  model.py  rnn_state_encoder.py  shorten_ep.py  train.py  train_env.py  train_wrapper_yolact.py  train_yolact.sh
configs/: beyond.yaml  beyond_trainer.yaml  challenge_objectnav2020.local.rgbd.yaml  challenge_objectnav2020v2.local.rgbd.yaml  challenge_objectnav2021.local.rgbd.yaml
extras/: analize_created_ep_set.py  balance_ep_set.py  divide_dict_json.py  divide_dict_json_eps.py  (+19 more)
vribot/src/laser_to_pointcloud2/: CMakeLists.txt
vribot/src/laser_to_pointcloud2/src/: laser_to_pointcloud2.cpp
(+394 files in other folders)
